...

                <include
                    android:id="@+id/transfer_destination"
                    layout="@layout/widget_transfer_destination_view"
                    android:visibility="visible" />
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_foreign_exchange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
...

                    <TextView
                        android:id="@+id/amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:layout_marginBottom="@dimen/grid_margin_bottom"
                        android:text="@string/mobileConfirmDetailsAmount"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
                        app:layout_constraintBottom_toBottomOf="parent"
...

                    <TextView
                        android:id="@+id/amount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:layout_marginBottom="@dimen/grid_margin_bottom"
                        android:text="@string/mobileConfirmDetailsFee"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
                        app:layout_constraintBottom_toBottomOf="parent"
...

                    <TextView
                        android:id="@+id/fee_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/transfer_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:layout_marginBottom="@dimen/grid_margin_bottom"
                        android:text="@string/mobileConfirmDetailsTotal"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
                        app:layout_constraintBottom_toBottomOf="parent"
...

                    <TextView
                        android:id="@+id/transfer_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/exchange_rate_warning_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/exchange_rate_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/notes_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/notes_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/transfer_confirm_button"
                    style="@style/Widget.Hyperwallet.Button"
                    android:layout_width="match_parent"
...
