...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sell_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_single_entry">

        <TextView
            android:id="@+id/sell_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_left"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginBottom="@dimen/grid_margin_bottom"
            android:text="@string/mobileFXsell"
            android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sell_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/sell_label"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginEnd="@dimen/grid_margin_right"
            android:layout_marginBottom="@dimen/grid_margin_bottom"
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buy_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_single_entry">

        <TextView
            android:id="@+id/buy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_left"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginBottom="@dimen/grid_margin_bottom"
            android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
            android:text="@string/mobileFXbuy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/buy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buy_label"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginEnd="@dimen/grid_margin_right"
            android:layout_marginBottom="@dimen/grid_margin_bottom"
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exchange_rate_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_single_entry">

        <TextView
            android:id="@+id/exchange_rate_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin_left"
            android:layout_marginTop="@dimen/grid_margin_top"
            android:layout_marginEnd="@dimen/grid_margin_left"
            android:layout_marginBottom="@dimen/grid_margin_bottom"
            android:text="@string/mobileFXRateLabel"
            android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exchange_rate_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/exchange_rate_value"
            android:layout_width="wrap_content"
...
