...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="@dimen/row_height_triple_entry">

    <TextView
        android:id="@+id/add_transfer_destination_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/plus_icon_offset"
        android:gravity="center"
        android:text="@string/add_text"
        android:textAppearance="@style/TextAppearance.Add.TransferMethod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_transfer_destination_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:text="@string/mobileAddTransferMethod"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Subtitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/add_transfer_destination_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <View
...
